--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,7 @@ maybe make categories only viewable when making a post if it belongs to you or i
 add featured/top rated posts section to home page
 add upvote/downvote system on posts and comments
 delete a comment if you own it / if you own the post
-
+redirect to post after editing a comment, make edit form show in a fancybox, close with js
 allow user to input returns when adding a data in a text area
 change location of uploaded files for posts
 add slug to profile page
