--- a/todo.txt
+++ b/todo.txt
@@ -18,7 +18,12 @@ viewing profile of other people through postauthor/comments/users page
 messaging system https://www.youtube.com/watch?v=UoBb1751tAM&ab_channel=LaravelDaily
 reply to a comment, if more than 2 comment replys then open up a comment thread in a new page
 update migrations for profile image
-Refactor views into sub dirs
 
-//done rough
+//in progress
+add upvotes/downvotes for posts/comments migrations
+-models too
+-component
+
+//done
 edit a comment if you own it
+Refactor views into sub dirs
