--- a/todo.txt
+++ b/todo.txt
@@ -1,25 +1,27 @@
 //todo
 
-add phpunit testing to check sql constraint errors
-separate logic into request files
-separate add/edit view logic into post/add.blade.php category/add.blade.php etc
-add more validation to posts/categories/comments for better security
-add profile page, add new col to user table for profile pic or add a new table to store such things
-maybe make categories only viewable when making a post if it belongs to you or if set to global=0, see default for guests
-add featured/top rated posts section to home page
-add upvote/downvote system on posts and comments
-delete a comment if you own it / if you own the post
-redirect to post after editing a comment, make edit form show in a fancybox, close with js
-allow user to input returns when adding a data in a text area
-change location of uploaded files for posts
-add slug to profile page
-make it so unused profile images get deleted
-viewing profile of other people through postauthor/comments/users page
-messaging system https://www.youtube.com/watch?v=UoBb1751tAM&ab_channel=LaravelDaily
-reply to a comment, if more than 2 comment replys then open up a comment thread in a new page
-update migrations for profile image
-models must use singular not plural
-models need fillable updating to have updated_at
+1. add phpunit testing to check sql constraint errors
+2. separate logic into request files? Maybe look into this later for best conventions as my functionaliy is simple I might not need to
+3. separate add/edit view logic into post/add.blade.php category/add.blade.php etc
+4. add more validation to posts/categories/comments for better security
+5. add profile page, add new col to user table for profile pic or add a new table to store such things
+6. maybe make categories only viewable when making a post if it belongs to you or if set to global=0, see default for guests
+7. add featured/top rated posts section to home page
+8. add upvote/downvote system on posts and comments
+9. delete a comment if you own it / if you own the post
+10. redirect to post after editing a comment, make edit form show in a fancybox, close with js
+11. allow user to input returns when adding a data in a text area
+12. change location of uploaded files for posts
+13. add slug to profile page
+14. make it so unused profile images get deleted
+15. viewing profile of other people through postauthor/comments/users page
+16. messaging system https://www.youtube.com/watch?v=UoBb1751tAM&ab_channel=LaravelDaily
+17. reply to a comment, if more than 2 comment replys then open up a comment thread in a new page
+18. update migrations for profile image
+19. models must use singular
+20. tables must be plural
+21. models need fillable updating to have updated_at
+
 //in progress
 add upvotes/downvotes for posts/comments migrations
 -models too
