--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,4 @@
 //todo
-
 1. add phpunit testing to check sql constraint errors
 2. separate logic into request files? Maybe look into this later for best conventions as my functionaliy is simple I might not need to
 3. separate add/edit view logic into post/add.blade.php category/add.blade.php etc
@@ -24,7 +23,12 @@
 22. add category selection to post editing
 23. file uploads to posts should go into their own sub dirs with the post id
 24. file upload size limit
-25. refeshing page after saving a new post causes duplicates
+
+//bugs
+
+//features
+
+//improvements
 
 //in progress
 show votes on post list and comments
@@ -34,3 +38,4 @@ edit a comment if you own it
 Refactor views into sub dirs
 add upvotes/downvotes for posts/comments migrations and models
 8. add upvote/downvote system on posts  https://www.youtube.com/watch?v=wAnu_qXbV8c&ab_channel=LaravelDaily
+25. refeshing page after saving a new post causes duplicates
