--- a/todo.txt
+++ b/todo.txt
@@ -6,7 +6,7 @@
 5. add profile page, add new col to user table for profile pic or add a new table to store such things
 6. maybe make categories only viewable when making a post if it belongs to you or if set to global=0, see default for guests
 7. add featured/top rated posts section to home page
-8. add upvote/downvote system on posts and comments
+8. add upvote/downvote system on comments
 9. delete a comment if you own it / if you own the post
 10. redirect to post after editing a comment, make edit form show in a fancybox, close with js
 11. allow user to input returns when adding a data in a text area
@@ -16,13 +16,13 @@
 15. viewing profile of other people through postauthor/comments/users page
 16. messaging system https://www.youtube.com/watch?v=UoBb1751tAM&ab_channel=LaravelDaily
 17. reply to a comment, if more than 2 comment replys then open up a comment thread in a new page
-18. update migrations for profile image
 19. models must use singular
 20. tables must be plural
 21. models need fillable updating to have updated_at
 22. add category selection to post editing
 23. file uploads to posts should go into their own sub dirs with the post id
 24. file upload size limit
+26. show votes on post list
 
 //bugs
 
@@ -31,7 +31,6 @@
 //improvements
 
 //in progress
-show votes on post list and comments
 
 //done
 edit a comment if you own it
@@ -39,3 +38,4 @@ Refactor views into sub dirs
 add upvotes/downvotes for posts/comments migrations and models
 8. add upvote/downvote system on posts  https://www.youtube.com/watch?v=wAnu_qXbV8c&ab_channel=LaravelDaily
 25. refeshing page after saving a new post causes duplicates
+18. update migrations for profile image
