show amount of comments a post has on the posts list

--- a/todo.txt
+++ b/todo.txt
@@ -26,9 +26,8 @@
 //features
 
 //improvements
-delete redirect to posts index
-view profile from author name on post, remove meme anchor maybe
-15. viewing profile of other people through postauthor/comments/users page
+view profile from author name on post, remove category anchor tag maybe
+15. viewing profile of other people through postauthor/users page
 
 //in progress
 
