--- a/todo.txt
+++ b/todo.txt
@@ -20,6 +20,5 @@
 24. file upload size limit
 27. try catch where I create new records
 
-
-
-
+in progress
+profile menu drop down - edit information. Maybe new migration to store it in? Or edit users
