--- a/todo.txt
+++ b/todo.txt
@@ -12,7 +12,7 @@
 12. change location of uploaded files for posts
 14. make it so unused profile images get deleted
 16. messaging system https://www.youtube.com/watch?v=UoBb1751tAM&ab_channel=LaravelDaily
-17. reply to a comment, if more than 2 comment replys then open up a comment thread in a new page
+17. if more than 2 comment replys then open up a comment thread in a new page
 19. models must use singular
 21. models need fillable updating to have updated_at
 22. add category selection to post editing
@@ -24,4 +24,5 @@
 
 in progress
 profile menu drop down - edit information. Maybe new migration to store it in? Or edit users
-comment replies
+
+# hosting or something https://pages.github.com/
