--- a/todo.txt
+++ b/todo.txt
@@ -12,9 +12,10 @@
 28. change user 'img' to 'avatar'
 29. replace whitespace in slugs with _
 30. move logic to services instead of controllers/models
+32. update comment count to also count replies
 
 // in progress //
-23. file uploads to posts should go into their own sub dirs with the post id
+31. search
 
 // look into this later //
 # hosting or something https://pages.github.com/
