--- a/todo.txt
+++ b/todo.txt
@@ -2,21 +2,17 @@
 1. add phpunit testing to check sql constraint errors
 4. add more validation to posts/categories/comments for better security
 7. add featured/top rated posts section to home page
-10. redirect to post after editing a comment, make edit form show in a fancybox, close with js
 11. allow user to input returns when adding a data in a text area
-12. change location of uploaded files for posts
 14. make it so unused profile images get deleted
-17. if more than 2 comment replys then open up a comment thread in a new page
+17. if more than 3 comment replies then open up a comment thread in a new page
 24. file upload size limit
 27. try catch where I create new records
-28. change user 'img' to 'avatar'
-29. replace whitespace in slugs with _
+29. do not allow spaces in usernames
 30. move logic to services instead of controllers/models
 32. update comment count to also count replies
 33. show recent acivity on user profile page e.g. recent posts and comments
-
+34. count comment replies in total comments count posts index
 // in progress //
-31. search
 
 // look into this later //
 # hosting or something https://pages.github.com/
