--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,7 @@
 35. integrity constraint on empty comment reply
 
 // in progress //
+refactor profile recent comments to be passed in as a variable and withcount for upvotes/downvotes
 
 // look into this later //
 # hosting or something https://pages.github.com/
